AM_CFLAGS = -O3 -I../include/
AM_LDFLAGS = -lpanel -lncurses

bin_PROGRAMS = stats
stats_SOURCES = bri.c conf.c csu.c detail.c eth-mii.c info.c input.c input.h labels.c labels.h listbox.c listbox.h main.c menurt.c menurt.h misc.c msgboxes.c msgboxes.h ppp.c qos.c read_proc.c stat_if.c summary.c textbox.h txbox.c txbox.h winops.c winops.h
